--- a/Latex_Proposal/proposal_sample.tex
+++ b/Latex_Proposal/proposal_sample.tex
@@ -25,7 +25,7 @@
     \begin{abstract}
         Write down the brief summary of project proposal.
         300 words maximum. 초록은 영어로 쓰세요. 제안서는
-        한국어로 작성해도 됩니다!
+        한국어로 작성해도 됩니다.
     \end{abstract}
 
     \tableofcontents
