Update Week11 (Juchan,Dongsu, Jimin).ipynb

--- a/WeeklyReport/JiminDongsuJuchan/Week11 (Juchan,Dongsu, Jimin).ipynb
+++ b/WeeklyReport/JiminDongsuJuchan/Week11 (Juchan,Dongsu, Jimin).ipynb
@@ -69,21 +69,6 @@
     "\n",
     "<br>\n",
     "\n",
-    "- Progress 2: 차별화\n",
-    "\n",
-    "  - 데이터를 통해 경북같은 경우 지역에 따라 산불 발생원인 다름을 확인함. \n",
-    "    ex) (칠곡·경산·영천은 시·군청과의 거리, 휴양림과 묘지로부터의 최소거리와 같은 인적 접근성 요인(입산자 실화)이 산불 발생에 주요하게 작용함.)\n",
-    "  - 구역별로 요인을 다르게 가중치를 두어 모델링. (기상적 요인 + 인위적 요인을 같이 볼 지역, 기상적 요인만 볼 지역)\n",
-    "  - 인위적 요인(쓰레기 소각, 밭두렁 소각, 건축물 화재 등)을 더 조사하여 요인 변수 추가를 고민.\n",
-    "  - 모델링 방법을 변경.\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "- 논문 1: 머신러닝과 샘플링을 이용한 강원도 지역 산불발생예측모형 개발\n",
     "\n",
     "    - 연구 목적: 일별 기상자료를 사용하여 강원도 지역에 정확성 높은 산불 예측 모형 만들기\n",
@@ -105,7 +90,7 @@
     "- 논문 3: 봄철과 가을철의 기상에 의한 전국 통합 산불발생확률 모형 개발\n",
     "  - 연구 목적: 9개의 도별 산불발생확률 모형을 산불발생 위험이 높은 봄철과 가을철의 기상변화에 의한 전국 통합 산불발생확률 모형으로 개선하여 산불예방 업무 지원\n",
     "  - 필요한 데이터: 봄철과 가을철 산불발생 현황, 시간대별 기상 변수 : 기온(평균, 최고, 최저), 상대습도(평균, 최소), 실효습도, 풍속(평균, 최대, 순간최대)\n",
-    "  - 연구 방법: 시계열 기상자료와 산불발생의 유무를 나타내는 더미 변수 산불발생 의 유무인 더미변수는 종속변수(dependent variable)로, 산불발생과 영향이 있는 기상요소들을 독립변수 (independent variable)로 하여 로지스틱 회귀모형 (logistic regression model) 변수들을 적용하여 산불 발생확률 추정\n"
+    "  - 연구 방법: 시계열 기상자료와 산불발생의 유무를 나타내는 더미 변수 산불발생 의 유무인 더미변수는 종속변수(dependent variable)로, 산불발생과 영향이 있는 기상요소들을 독립변수 (independent variable)로 하여 로지스틱 회귀모형 (logistic regression model) 변수들을 적용하여 산불 발생확률 추정"
    ]
   },
   {
@@ -113,6 +98,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Progress 2: 차별화\n",
+    "\n",
+    "  - 데이터를 통해 경북같은 경우 지역에 따라 산불 발생원인 다름을 확인함. \n",
+    "    ex) (칠곡·경산·영천은 시·군청과의 거리, 휴양림과 묘지로부터의 최소거리와 같은 인적 접근성 요인(입산자 실화)이 산불 발생에 주요하게 작용함.)\n",
+    "  - 구역별로 요인을 다르게 가중치를 두어 모델링. (기상적 요인 + 인위적 요인을 같이 볼 지역, 기상적 요인만 볼 지역)\n",
+    "  - 인위적 요인(쓰레기 소각, 밭두렁 소각, 건축물 화재 등)을 더 조사하여 요인 변수 추가를 고민.\n",
+    "  - 모델링 방법을 변경.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "- 추천 프로젝트\n",
     "- 프로젝트: 산불 취약지역 예상 알고리즘 개발 <br>\n",
     "- 사용 방법\n",
     "  - 의사결정 트리(Decision Tree)\n",
@@ -139,7 +135,7 @@
     "<br>\n",
     "- 참고문헌\n",
     "  - 박형모, 이수민, 이민영, & 김남근. (2022). 인공지능 기반의 위성영상 분석을 이용한 시설물의 산불취약지수 계산 알고리즘 개발. 대한기계학회 춘추학술대회, 2293-2293.\n",
-    "  - 윤정인, 이주영, 박장섭, 정구홍, & 이진우. (2021). 산불 재해에 대한 도시의 취약도 분석 방법론 제안: 캘리포니아 케이스 위주로. 대한교통학회 학술대회지, 436-437."
+    "  - 윤정인, 이주영, 박장섭, 정구홍, & 이진우. (2021). 산불 재해에 대한 도시의 취약도 분석 방법론 제안: 캘리포니아 케이스 위주로. 대한교통학회 학술대회지, 436-437.\n"
    ]
   },
   {
