Update Week11 (Juchan,Dongsu, Jimin).ipynb

--- a/WeeklyReport/JiminDongsuJuchan/Week11 (Juchan,Dongsu, Jimin).ipynb
+++ b/WeeklyReport/JiminDongsuJuchan/Week11 (Juchan,Dongsu, Jimin).ipynb
@@ -69,28 +69,14 @@
     "\n",
     "<br>\n",
     "\n",
-    "- 논문 1: 머신러닝과 샘플링을 이용한 강원도 지역 산불발생예측모형 개발\n",
-    "\n",
-    "    - 연구 목적: 일별 기상자료를 사용하여 강원도 지역에 정확성 높은 산불 예측 모형 만들기\n",
-    "    - 방법: 로지스틱 회귀분석과 머신러닝 기법 (랜덤 포레스트와 xgboost 방법)을 활용\n",
-    "    - 필요한 데이터: 산불 발생 데이터 (산림청에서 제공 – 2003~2016), 기상자료 (기온, 강수, 풍속, 습도)\n",
-    "    - Accuracy: 약 76.1%, 산불이 발생한 104선 중 80건의 발생 예측에 성공 \n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "- 논문 2: 산불 피해자의 삶의 질에 영향을 미치는 요인: 울진/삼척 산불을 중심으로\n",
-    "  - 연구 목적: 산불의 규모가 대형화됨에 따라 인명 및 재산, 심리적으로 피해를 주는 재난으로 변화함. 따라서 산불피해자 관점을 고려하여 피해자들의 삶의 질을 신속하게 복구하기 위해 정부의 지지, PTSD 및 회복탄력성이 삶의 질에 미치는 영향을 분석\n",
-    "  - 연구 방법: 구조방정식 모형을 통해 산불피해자들의 삶의 질에 영향을 미치는 정의적 요인들의 구조적 관계를 파악 (정부의 지지, PTSD, 회복탄력성이 삶의 질에 미치는 영향 관계 분석)\n",
-    "  - 필요한 데이터: 설문지 (삶의 질 6문 항, 정부의 지지 8문항, PTSD 5문항, 회복탄력성 5문항을 포함하여 4개의 정의적 요인에서 총 24문항)\n",
-    "  - 결과: 연구 결과를 통해 삶의 질에 긍정적인 영향을 미치는 주요한 변수, PTSD 증상을 완화해주는 보호요인임을 밝힘.\n",
-    "\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "- 논문 3: 봄철과 가을철의 기상에 의한 전국 통합 산불발생확률 모형 개발\n",
-    "  - 연구 목적: 9개의 도별 산불발생확률 모형을 산불발생 위험이 높은 봄철과 가을철의 기상변화에 의한 전국 통합 산불발생확률 모형으로 개선하여 산불예방 업무 지원\n",
-    "  - 필요한 데이터: 봄철과 가을철 산불발생 현황, 시간대별 기상 변수 : 기온(평균, 최고, 최저), 상대습도(평균, 최소), 실효습도, 풍속(평균, 최대, 순간최대)\n",
-    "  - 연구 방법: 시계열 기상자료와 산불발생의 유무를 나타내는 더미 변수 산불발생 의 유무인 더미변수는 종속변수(dependent variable)로, 산불발생과 영향이 있는 기상요소들을 독립변수 (independent variable)로 하여 로지스틱 회귀모형 (logistic regression model) 변수들을 적용하여 산불 발생확률 추정"
+    "- 참고한 논문 :\n",
+    "  - 머신러닝과 샘플링을 이용한 강원도 지역 산불발생예측모형 개발\n",
+    "  - 기상 데이터를 이용한 산불 피해규모의 예측방법연구\n",
+    "  - 캐나다 산불 기상지수를 이용한 산불발생확률모형 개발\n",
+    "  - 대형산불 예방.대응을 위한 최신 기술개발의 현황 및 과제\n",
+    "  - 머신러닝을 활용한 산불발생예측모형 개발과 과제\n",
+    "  - 로지스틱 회귀모형을 이용한 산불 발생확률 모형 개발\n",
+    "  - 봄철과 가을철의 기상에 의한 전국 통합 산불발생확률 모형 개발"
    ]
   },
   {
@@ -108,11 +94,21 @@
     "\n",
     "<br>\n",
     "\n",
-    "- 추천 프로젝트\n",
+    "- 산불 피해자의 삶의 질에 영향을 미치는 요인: 울진/삼척 산불을 중심으로\n",
+    "  - 연구 목적: 산불의 규모가 대형화됨에 따라 인명 및 재산, 심리적으로 피해를 주는 재난으로 변화함. 따라서 산불피해자 관점을 고려하여 피해자들의 삶의 질을 신속하게 복구하기 위해 정부의 지지, PTSD 및 회복탄력성이 삶의 질에 미치는 영향을 분석\n",
+    "  - 연구 방법: 구조방정식 모형을 통해 산불피해자들의 삶의 질에 영향을 미치는 정의적 요인들의 구조적 관계를 파악 (정부의 지지, PTSD, 회복탄력성이 삶의 질에 미치는 영향 관계 분석)\n",
+    "  - 필요한 데이터: 설문지 (삶의 질 6문 항, 정부의 지지 8문항, PTSD 5문항, 회복탄력성 5문항을 포함하여 4개의 정의적 요인에서 총 24문항)\n",
+    "  - 결과: 연구 결과를 통해 삶의 질에 긍정적인 영향을 미치는 주요한 변수, PTSD 증상을 완화해주는 보호요인임을 밝힘.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "\n",
     "- 프로젝트: 산불 취약지역 예상 알고리즘 개발 <br>\n",
     "- 사용 방법\n",
     "  - 의사결정 트리(Decision Tree)\n",
     "  - 랜덤 포레스트(Random Forest)\n",
+    "  - GIS\n",
     "<br>\n",
     "- 사용 변수\n",
     "  - 진/출입로\n",
@@ -148,12 +144,6 @@
     "  -> 김정현 교수님과의 미팅을 통해 피드백을 계속 받을 예정\n",
     "- requests: 논문, 기사, 데이터 산불과 관련된 모든 문헌들을 계속해서 조사해서 다른팀이 가지지 못한 차별화 전략에 대해 조사 및 고민이 더 필요함."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
